--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Nabla&family=Raleway:wght@500;600&family=Roboto&family=Tilt+Warp&display=swap");
 :root {
   --footer-height: 60px;
   --logo-height: 8rem;
@@ -7,11 +6,13 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Raleway", "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #d4cdc5;
 }
 
 code {
@@ -19,23 +20,20 @@ code {
     monospace;
 }
 
-*,
+/* *,
 *::after,
 *::before {
-  box-sizing: border-box;
-  background-color: rgb(255, 255, 255); 
-}
+  /* background-color: #d4cdc5; */
 
 button {
   border: none;
   border-radius: 0;
-
+  background: #f4f4f2;
   margin: 0;
   padding: 0;
   width: auto;
-  background: none;
-  appearance: none;
 
+  appearance: none;
   color: inherit;
   font: inherit;
   line-height: normal;
