--- a/src/components/Playground/style.css
+++ b/src/components/Playground/style.css
@@ -2,7 +2,7 @@
     color: purple;
     margin-bottom: 48px;
     align-self: center;
-    animation: reveal 7s infinite;
+    /* animation: reveal 7s infinite; */
 }
 
 .container {
@@ -35,6 +35,7 @@ p {
     z-index: 3;
     justify-content: center;
     align-items: center;
+
 }
 
 .unlocked-music {
@@ -47,16 +48,19 @@ p {
     gap: rem;
     line-height: calc(16px * 1.3);
     box-sizing: border-box;
-
+    border-radius: 1rem;
     position: relative;
-
+    transition: all 0.3s ease-in-out;
+    -webkit-box-shadow: -1px 0px 32px -4px rgba(82, 82, 82, 0.62);
+    -moz-box-shadow: -1px 0px 32px -4px rgba(82, 82, 82, 0.62);
+    box-shadow: -1px 0px 32px -4px rgba(82, 82, 82, 0.62);
 }
 
 .music {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 2rem;
+    padding: 1.2rem 2rem;
     border-bottom: 1px solid #c0c0c0;
     gap: 0.5rem;
 }
@@ -75,8 +79,14 @@ p {
     align-items: center;
     padding: 3rem;
     text-align: center;
+    justify-content: center;
+    white-space: pre-wrap;
 }
 
-h2 {
+.music p {
+    font-weight: 300;
+}
+
+h1 {
     margin: 0;
 }
